# 5b

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array/: ordered_array.c  ordered_array.h
libs/data_structures/unordered_array/: unordered_array.c  unordered_array.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vectorVoid/: vectorVoid.c  vectorVoid.h
libs/string/: string_.c  string_.h
libs/string/tasks/: CMakeLists.txt  allTests.h  areSortedWords.h  containPairWordsFromSameLits.h  countPolindroms.h  deleteAllPalindros.h  digitToEnd.h  fillingSmallStringByReverseBigString.h  getLastWordInString1ContainedString2.h  getMixString.h  getStringFromWordsDifferentByLast.h  getWordBeforeFirstWordS1ContainedInS2.h  isContainingSameWords.h  isStringContainAllLitsOfWord.h  printWordBeforeFirstWordWithA.h  removeExtraSpaces.h  removeNonLetters.h  replace.h  replaceAllDigitAsSpaces.h  reverseOutoutWordsInString.h  reverseWordsInString.h
