add_library(
        data_structures
        bitset/bitset.c
        unordered_array/unordered_array.c unordered_array/unordered_array.h
        ordered_array/ordered_array.c ordered_array/ordered_array.h
        vector/vector.h vector/vector.c
        vectorVoid/vectorVoid.c vectorVoid/vectorVoid.h)

